--- a/src/components/demolesson/demolesson.module.scss
+++ b/src/components/demolesson/demolesson.module.scss
@@ -11,11 +11,14 @@
 }
 
 .demoLesson__heading {
-    font-size: 2.5rem; // Başlık boyutu
-    margin: 50px 0 20px; // Boşluk
-    color: $secondary-color;
-    font-weight: bold; // Kalın yazı
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2); // Metin gölgesi
+    font-size: 2.5rem; /* Başlık boyutunu büyütür */
+    color: #333; /* Başlık rengi */
+    text-align: center; /* Ortalar */
+    font-weight: 700; /* Kalın yazı stili */
+    letter-spacing: 1px; /* Harfler arası boşluk */
+    padding-bottom: 20px; /* Alt kısımdan boşluk */
+    margin-bottom: 30px; /* Başlıktan sonra boşluk bırakır */
+    position: relative; /* Altındaki çizgiyi yerleştirmek için gerekli */
 }
 
 .demoLesson__content {
