Düzelt: İkincil renk değiştirildi; stil güncellemeleri yapıldı

--- a/src/app/_variables.scss
+++ b/src/app/_variables.scss
@@ -6,7 +6,7 @@ $primary-font:"Kanit", sans-serif;
 //Colors
 
 $primary-color: #3583f0;
-$secondary-color: #1D2026;
+$secondary-color: #545454;
 $tertiary-color: #f8f9fa;
 $background-color: #f8f1e9;
 
