Düzelt: Stil dosyalarında $secondary-color kullanıldı; footer bileşeninde logo güncellendi

--- a/src/components/demolesson/demolesson.module.scss
+++ b/src/components/demolesson/demolesson.module.scss
@@ -12,7 +12,7 @@
 
 .demoLesson__heading {
     font-size: 2.5rem; /* Başlık boyutunu büyütür */
-    color: #333; /* Başlık rengi */
+    color: $secondary-color; /* Başlık rengi */
     text-align: center; /* Ortalar */
     font-weight: 700; /* Kalın yazı stili */
     letter-spacing: 1px; /* Harfler arası boşluk */
