--- a/src/components/withus/withus.module.scss
+++ b/src/components/withus/withus.module.scss
@@ -23,7 +23,7 @@
 .withus h1 {
     font-size: 2rem;
     font-weight: bold;
-    color: #333;
+    color: $secondary-color;
     margin-bottom: 30px;
 }
 
