--- a/src/components/publications/publications.module.scss
+++ b/src/components/publications/publications.module.scss
@@ -36,4 +36,10 @@
         box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
         border-color: rgba(255, 0, 0, 1);
     }
+
+    @media screen and (max-width: 768px) {
+        padding: 10px;
+        width: 150px;
+        height: 75px;
+    }
 }
